# n-cmapss-rul-mlops-factory

./: .gitignore  LICENSE  README.md  manifest.yaml  pyproject.toml
infrastructure-setup/: pyproject.toml
infrastructure-setup/docker/hpc-training-worker/: Dockerfile  Dockerfile.dockerignore  requirements.in
infrastructure-setup/docker/redpanda/: docker-compose.yml
infrastructure-setup/scripts/: artifact-synchronization.sh  compliance-sync.sh  data-lake-ingestion.sh  image-build-publish.sh  pipeline-orchestrator.sh  streaming-pipeline-orchestrator.sh  worker-provisioning.sh
infrastructure-setup/src/infrastructure_setup/: __init__.py
infrastructure-setup/src/infrastructure_setup/compliance_ingestion/: __init__.py  cellar_client.py  law_processor.py  registry.py  semantic_chunker.py
infrastructure-setup/src/infrastructure_setup/data_logistics/: dataset_ingestion.py
infrastructure-setup/src/infrastructure_setup/guides_ingestion/: guide_client.py  guide_processor.py  registry.py  semantic_chunker.py
infrastructure-setup/terraform/live/_bootstrap/: main.tf
infrastructure-setup/terraform/live/hpc-training-env/: .terraform.lock.hcl  backend.tf  kms.tf  main.tf  terraform.tfvars.example  variables.tf
infrastructure-setup/terraform/modules/ephemeral-hpc-worker/: compute.tf  iam.tf  outputs.tf  storage.tf  variables.tf
infrastructure-setup/terraform/modules/ephemeral-hpc-worker/scripts/: startup.sh.tftpl
rul-model-factory/: README.md  pyproject.toml
rul-model-factory/artifacts/runs/rul_bayesian_20260420T0650Z_cpu_hpc/data/: rul_bayesian_20260420T0650Z_cpu_hpc.test_DS02.parquet
rul-model-factory/artifacts/runs/rul_bayesian_20260420T0650Z_cpu_hpc/logs/: rul_bayesian_20260420T0650Z_cpu_hpc.events.out.tfevents.1776623037.6de8928385e1.1.0  rul_bayesian_20260420T0650Z_cpu_hpc.events.out.tfevents.1776633326.6de8928385e1.1.1
rul-model-factory/artifacts/runs/rul_bayesian_20260420T0650Z_cpu_hpc/metadata/: rul_bayesian_20260420T0650Z_cpu_hpc.hparams.yaml
rul-model-factory/artifacts/runs/rul_bayesian_20260420T0650Z_cpu_hpc/model/: rul_bayesian_20260420T0650Z_cpu_hpc.pretrained_10.pt  (+1 more)
rul-model-factory/src/rul_model_factory/: __init__.py
rul-model-factory/src/rul_model_factory/cloud_trainer/: execution_controller.py
streaming_pipeline/streaming_pipeline/: README.md  pyproject.toml
streaming_pipeline/streaming_pipeline/src/streaming_pipeline/: __init__.py  config.py  consumer.py  dashboard.py  ds02-006-preprocessing.py  models.py  producer.py
(+179 files in other folders)
