[project]
name = "n-cmapss-agentic-factory"
version = "0.1.0"
description = "N-CMAPSS MLOps RUL Factory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
nasa-research = [
    "h5py>=3.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "google-genai>=1.72.0",
    "marimo>=0.23.1",
    "tensorboard>=2.16.0",
    "pyyaml>=6.0.3",
]

[tool.uv.workspace]
members = [
    "rul-model-factory",
    "infrastructure-setup",
    "streaming_pipeline/streaming_pipeline",
]
