[project]
name = "infrastructure-setup"
version = "0.1.0"
description = "Cloud infrastructure management and deployment scripts"
authors = [
    { name = "Stan_Buren", email = "burundu4ok2000@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.4",
    "markdownify>=1.2.2",
    "rich>=14.3.4",
    "selectolax>=0.4.7",
    "sigstore>=3.6.1",
    "docker>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
