[project]
name = "rul-model-factory"
version = "0.1.0"
description = "Industrial N-CMAPSS RUL model factory for containerized HPC execution."
readme = "README.md"

authors = [
    { name = "Stan_Buren", email = "burundu4ok2000@gmail.com" }
]
dependencies = [
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rul_model_factory"]

[dependency-groups]
dev = [

]
