[project]
name = "streaming-pipeline"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Stan_Buren", email = "burundu4ok2000@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.14.0",
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "h5py>=3.16.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "safetensors>=0.7.0",
    "streamlit>=1.56.0",
    "streamlit-autorefresh>=1.0.1",
    "torch>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
